[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Sprites/Miscellaneous/Teleporter.png" type="Texture" id=1]
[ext_resource path="res://Entities/Teleporter/Teleporter.gd" type="Script" id=2]
[ext_resource path="res://Misc/DebugShapeDrawer/DebugShapeDrawer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Entities/PlayerAreaNotifier/PlayerAreaNotifier.tscn" type="PackedScene" id=4]



[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 24 )

[node name="Teleporter" type="Sprite"]
texture = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="DebugShapeDrawer" parent="." instance=ExtResource( 3 )]
draw_enabled = false
sampling_shape = SubResource( 1 )
draw_color = Color( 0, 0.713726, 1, 1 )
filled = false
centered = true
draw_width = 1.0

[node name="AreaNotifier" parent="." instance=ExtResource( 4 )]
margin_left = -16.0
margin_top = -4.0
margin_bottom = 4.0
border_color = Color( 1, 0, 0, 1 )
INTERACT_TYPE = 1
PLAYER_ON_FLOOR_ONLY = true

[node name="TapTexture" parent="AreaNotifier" index="0"]
margin_top = -51.0
margin_bottom = -27.0

[node name="Label" parent="AreaNotifier" index="1"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 11.0
text = "TELEPORT"

[node name="TeleportDelayTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="draw" from="." to="." method="_on_Teleporter_draw"]
[connection signal="entered_area" from="AreaNotifier" to="." method="_on_AreaNotifier_entered_area"]
[connection signal="timeout" from="TeleportDelayTimer" to="." method="_on_TeleportDelayTimer_timeout"]

[editable path="AreaNotifier"]
